# brazen

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SKILL.md  release-plz.toml
.claude/: settings.json
.claude/hooks/: docs-reminder.sh
.githooks/: post-commit  pre-commit  reference-transaction
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml  release.yml
bz/: Cargo.toml
bz/src/: main.rs  native.rs  transport.rs
bz/src/native/: cache.rs  cache_tests.rs  creds.rs  rng.rs  tests.rs
bz/src/transport/: tests.rs
bz/tests/: live_conformance.rs  live_encode_openai.rs  live_fuzz_openai.rs  ollama_smoke.rs
bz/tests/live_support/: exec.rs  grammar.rs  openai.rs
data/: defaults.toml
examples/: stdio_transport.rs
scripts/: smoke.sh
specs/: 0001-architecture.md  0003-anthropic-messages.md  README.md  anthropic-messages.md  architecture.md  auth.md  canonical-protocol.md  claude-code.md  config.md  ingress.md  interactive-output.md  model-discovery.md  openai-chat-mapping.md  protocol-dedup.md  providers.md  sse-decoder.md  transport.md
src/: cli.rs  lib.rs  main.rs  native.rs  registry.rs  store.rs  testing.rs  transport.rs
src/auth/: flows.rs  jwt.rs  login.rs  mod.rs  oauth.rs  oauth_row.rs  refresh.rs  urlencode.rs  wire.rs
src/canonical/: error.rs  event.rs  event_serde.rs  mod.rs  model.rs  request.rs  request_de.rs  request_de_tool.rs  retry_after.rs
src/cli/: mod.rs  parse.rs
src/config/: dump.rs  env.rs  errors.rs  load.rs  mod.rs  partial.rs  partial_de.rs  provider.rs  resolve.rs  resolved.rs
src/config/partial/: ingress.rs  mod.rs  row.rs
src/config/resolve/: ingress.rs  mod.rs  row.rs
src/ingress/: mod.rs  reinject.rs  state.rs
src/native/: cache.rs  cache_tests.rs  creds.rs  exec.rs  listen.rs  relay.rs  tests.rs  transport.rs
src/os/: browser.rs  mod.rs
src/pipeline/: input.rs  mod.rs  parse.rs  pretty.rs  sink.rs  style.rs
src/protocol/: frame.rs  json.rs  mod.rs  sse.rs  synth.rs
src/run/: discovery.rs  drive.rs  events.rs  generate.rs  mod.rs  models.rs  raw.rs  request.rs  respond.rs  serve.rs
src/store/: ambient.rs  mod.rs  replay.rs
src/testing/: cache.rs  clock.rs  listen.rs  login.rs  mod.rs  store.rs  transport.rs
src/tests/: ambient_discovery.rs  ambient_parse.rs  anthropic_cache.rs  anthropic_decode.rs  anthropic_decode_finish.rs  anthropic_encode.rs  anthropic_encode_content.rs  anthropic_fixtures.rs  anthropic_server_tool_fixtures.rs  anthropic_server_tools.rs  auth_apply.rs  canonical_error.rs  canonical_event.rs  canonical_event_compat.rs  canonical_ladder.rs  canonical_model.rs  canonical_request.rs  canonical_request_media.rs  canonical_request_tool.rs  canonical_v1_goldens.rs  claude_code_decode.rs  claude_code_encode.rs  claude_code_fixtures.rs  claude_code_run.rs  claude_session_conformance.rs  cli_args.rs  cli_args_prompt.rs  cli_route.rs  config_body_defaults.rs  config_defaults.rs  config_dump.rs  config_env.rs  config_errors.rs  config_fallthrough.rs  config_fill.rs  config_ingress.rs  config_partial.rs  config_preamble.rs  config_priority.rs  config_resolve.rs  (+103 more)
src/transport/: envelope.rs
tasks/: bl-00e7.md  bl-0272.md  bl-0333.md  bl-03b6.md  bl-0456.md  bl-04dc.md  bl-0634.md  bl-075a.md  bl-080b.md  bl-0927.md  bl-0965.md  bl-09c6.md  bl-0ab8.md  bl-0ac9.md  bl-0b89.md  bl-0c05.md  bl-0f77.md  bl-1139.md  bl-1156.md  bl-1189.md  bl-1226.md  bl-135a.md  bl-135d.md  bl-13cd.md  bl-13f0.md  bl-1421.md  bl-1444.md  bl-1445.md  bl-1465.md  bl-1573.md  bl-18d5.md  bl-18db.md  bl-1ae3.md  bl-1d07.md  bl-1d1b.md  bl-1d6c.md  bl-1f9e.md  bl-2078.md  bl-209d.md  bl-20d5.md  (+226 more)
tests/: ambient.rs  ambient_discovery.rs  anthropic_decode.rs  anthropic_encode.rs  anthropic_fixtures.rs  anthropic_oauth_recipe.rs  auth_apply.rs  canonical_error.rs  canonical_event.rs  canonical_model.rs  canonical_request.rs  cli_args.rs  config_body_defaults.rs  config_dump.rs  config_env.rs  config_errors.rs  config_fill.rs  config_partial.rs  config_preamble.rs  config_resolve.rs  config_route.rs  config_strip.rs  cross_check_basic.rs  decode_full.rs  decode_full_structured.rs  google_decode_errors.rs  google_encode.rs  google_fixtures.rs  interface_parity.rs  list_models.rs  list_models_help.rs  live_conformance.rs  live_encode_openai.rs  live_fuzz_openai.rs  live_oauth_openai.rs  login_browser.rs  login_device.rs  model_discovery_decode.rs  oauth2_provider_recipe.rs  oauth_pure.rs  (+38 more)
tests/config_support/: mod.rs
tests/decode_full_support/: mod.rs
tests/fixtures/: anthropic_error_overloaded.json  anthropic_messages_basic.sse  anthropic_messages_nonstream.json  anthropic_messages_nonstream_refusal.json  anthropic_messages_nonstream_web_search.json  anthropic_messages_pause.sse  anthropic_messages_refusal.sse  anthropic_messages_request_full.json  anthropic_messages_request_minimal.json  anthropic_messages_thinking_tools.sse  anthropic_messages_web_search.sse  claude_code_2_1_217_application_request.json  claude_code_basic.ndjson  claude_code_error_loggedout.ndjson  claude_session_request.json  golden_v1_errors.jsonl  golden_v1_events.jsonl  golden_v1_requests.jsonl  google_error.json  google_genai_basic.sse  google_genai_nonstream.json  google_genai_prompt_block.sse  google_genai_thinking.sse  google_genai_tools.sse  ndjson_ollama.ndjson  ollama_chat_basic.ndjson  ollama_chat_nonstream.json  ollama_chat_thinking.ndjson  ollama_chat_tools.ndjson  ollama_error.json  openai_chat_basic.sse  openai_chat_finish_no_done.sse  openai_chat_midstream_error_done.sse  openai_chat_midstream_error_eof.sse  openai_chat_nonstream.json  openai_chat_nonstream_empty.json  openai_chat_nonstream_refusal.json  openai_chat_other_finish.sse  openai_chat_refusal_field.sse  openai_chat_refusal_filter.sse  (+14 more)
tests/list_models_support/: mod.rs
tests/live_support/: exec.rs  mod.rs
tests/login_support/: mod.rs
tests/oauth_pure_support/: mod.rs
tests/responses_decode_errors_support/: mod.rs
tests/run_support/: mod.rs
tests/sim_support/: mod.rs
tests/transport_support/: mod.rs  temp.rs  tls.rs
(+73 files in other folders)
