[workspace]
# The pure, network-free core (`brazen`, this package) and the impure CLI shim
# (`bz`, the member below) are SEPARATE crates. `bz` depends on `brazen` + `ureq`;
# `brazen` depends on neither `ureq` nor `libc`. So the lib literally cannot link
# the network client — the "lib is pure / network-free" invariant (arch §9.5, §10)
# is enforced by the crate graph, not by a comment + discipline (bl-c420).
members = ["bz"]

# Single source of truth for the shared publish metadata: both crates inherit
# these with `field.workspace = true`, so version/license/repo never drift.
# Pre-release: version is 0.0.0 and `publish = false` is set on both crates — the
# metadata is fully wired, but the crates do NOT go to crates.io until we drop the
# guard and bump the version (the one deliberate "go-live" switch).
[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["mudbungie <orionriver@gmail.com>"]
repository = "https://github.com/mudbungie/brazen"
keywords = ["llm", "ai", "openai", "anthropic", "cli"]
categories = ["command-line-utilities", "api-bindings"]

[package]
name = "brazen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A stateless, swiss-army-knife adapter for every LLM provider and protocol."
readme = "README.md"
publish = false  # pre-release guard; flip to publish (see [workspace.package])

[lib]
name = "brazen"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# PKCE S256 (RFC 7636): challenge = BASE64URL-NOPAD(SHA256(verifier)). Both are
# pure-Rust, no C deps (the musl/cross-compile story, arch §10, holds), and their
# code is not counted toward the lib's 100% line coverage — only our call sites.
sha2 = "0.10"
base64 = "0.22"
