[package]
name = "bz"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "The brazen CLI: the impure native shim that wires brazen's seams."
publish = false  # pre-release guard; flip to publish (see ../Cargo.toml)

# `src/main.rs` is the one bin (auto-discovered as `bz`); `native.rs`/`transport.rs`
# are its MODULES, not separate bins (they live in `src/`, not `src/bin/`). The
# whole crate is the coverage-excluded shim (arch §9.5, §10); the lib reaches 100%
# behind injection.

[dependencies]
# A path dep needs an explicit `version` to be publishable: crates.io rewrites
# the path away and resolves `brazen` from the registry, so `bz` must publish
# AFTER `brazen` (the release workflow does so in order).
brazen = { path = "..", version = "0.0.0" }
# (De)serialize the per-provider 0600 credential JSON in `XdgCredStore` (auth §5.2).
serde_json = "1"
# base64url-no-pad for the PKCE verifier / CSRF state token (auth §7.2, §7.4).
base64 = "0.22"

# The blocking, rustls-backed HTTP client — the ONLY user of `ureq` in the
# workspace (`bz/src/transport.rs`), behind the lib's `Transport` seam. Pure-Rust
# TLS (`rustls` + bundled `webpki-roots`), no OpenSSL/`pkg-config`, no async runtime
# (arch §10), so the single-binary musl/Windows/macOS story holds. `brazen` does
# NOT depend on `ureq`, so the pure core cannot link it (bl-c420).
ureq = { version = "3", default-features = false, features = ["rustls"] }

# Unix-only: restore the default SIGPIPE disposition (arch §5.8). `libc` carries no
# C deps; `brazen` does not depend on it (the lib forbids unsafe).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Test-only: a throwaway tempdir to root the real `XdgCredStore` so its atomic-write
# / 0600 / 0700 invariants are verified without touching `$XDG_DATA_HOME` (bl-5b5a).
[dev-dependencies]
tempfile = "3"
